--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ env_logger = "0.11"
 regex = "1.5"
 log = "0.4.22"
 
+[dev-dependencies]
+sha1 = "0.10.6"
+hex = "0.4"    # or the latest version
+
 [workspace]
 members = [
     "examples/imginfo",
