--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,25 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Daniel Balsom"]
 readme = "README.md"
-keywords = ["emulation", "ibm", "dos"]
+keywords = ["emulation", "ibm", "floppy", "disk"]
 repository = "https://github.com/dbalsom/fluxfox"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bit-vec = "0.8"
 binrw = "0.14"
 thiserror = "1.0"
+num-traits = "0.2.14"
+num-derive = "0.4"
 logger = "0.4"
 env_logger = "0.11"
 regex = "1.5"
 log = "0.4.22"
+rand = "0.8.5"
+
+# Dependencies for optional features
+image = { version = "0.25", features = ["png"], optional = true }
+zip = { version = "2.1.3", optional = true }
 
 [dev-dependencies]
 sha1 = "0.10.6"
@@ -23,4 +31,10 @@ hex = "0.4"    # or the latest version
 [workspace]
 members = [
     "examples/imginfo",
+    "examples/imgviz",
 ]
+
+[features]
+default = ["viz", "zip"]
+viz = ["dep:image"]
+zip = ["dep:zip"]
