--- a/examples/imgviz/Cargo.toml
+++ b/examples/imgviz/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "imginfo"
+name = "imgviz"
 version = "0.1.0"
 authors = ["Daniel Balsom"]
 edition = "2021"
@@ -13,6 +13,8 @@ fluxfox = { path = "../.." }
 logger = "0.4"
 env_logger = "0.11"
 log = "0.4.22"
+image = "0.25"
+fast_image_resize = "4.2.1"
 
 [features]
 default = ["viz"]
