--- a/examples/imgviz/Cargo.toml
+++ b/examples/imgviz/Cargo.toml
@@ -15,6 +15,9 @@ env_logger = "0.11"
 log = "0.4.22"
 image = "0.25"
 fast_image_resize = "4.2.1"
+tiny-skia = "0.11"
+crossbeam = "0.8.4"
+anyhow = "1.0"
 
 [features]
 default = ["viz"]
