--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ env_logger = "0.11"
 regex = "1.5"
 log = "0.4.22"
 rand = "0.8.5"
+sha1_smol = "1.0.1"
 
 # Dependencies for optional features
 image = { version = "0.25", features = ["png"], optional = true }
