--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,9 @@ sha1_smol = "1.0.1"
 # Dependencies for optional features
 image = { version = "0.25", features = ["png"], optional = true }
 tiny-skia = { version = "0.11", optional = true }
-zip = { version = "2.1.3", optional = true }
+zip = { version = "2.1.3", default-features = false, features = ["bzip2", "deflate", "deflate64", "lzma", "time", "zstd"], optional = true }
+# Match version of flate2 used by zip
+#flate2 = { version = "^1.0.30" }
 
 [dev-dependencies]
 sha1 = "0.10.6"
