--- a/crates/ffedit/Cargo.toml
+++ b/crates/ffedit/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ffedit"
-version.workspace = true
+version = "0.1.0"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -11,3 +11,8 @@ repository.workspace = true
 fluxfox = { path = "../.." }
 crossterm = "0.28.1"
 ratatui = "0.28.1"
+tui-popup = "0.5.0"
+
+crossbeam-channel = "0.5.13"
+bpaf = { version = "0.9", features = ["autocomplete"] }
+
