--- a/crates/ffedit/Cargo.toml
+++ b/crates/ffedit/Cargo.toml
@@ -12,7 +12,9 @@ fluxfox = { path = "../.." }
 crossterm = "0.28.1"
 ratatui = "0.28.1"
 tui-popup = "0.5.0"
-
+log = "0.4.22"
+once_cell = "1.8.0"
+anyhow = "1.0"
 crossbeam-channel = "0.5.13"
 bpaf = { version = "0.9", features = ["autocomplete"] }
 
