add FluxStreamTrack, PLL improvements, beginning FM track support

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,171 @@ tests/images/*
 
 # Added by cargo
 /target
+/plots/pll_0_0.html
+/plots/pll_0_1.html
+/plots/pll_1_0.html
+/plots/pll_1_1.html
+/plots/pll_2_0.html
+/plots/pll_2_1.html
+/plots/pll_3_0.html
+/plots/pll_3_1.html
+/plots/pll_4_0.html
+/plots/pll_4_1.html
+/plots/pll_5_0.html
+/plots/pll_5_1.html
+/plots/pll_6_0.html
+/plots/pll_6_1.html
+/plots/pll_7_0.html
+/plots/pll_7_1.html
+/plots/pll_8_0.html
+/plots/pll_8_1.html
+/plots/pll_9_0.html
+/plots/pll_9_1.html
+/plots/pll_10_0.html
+/plots/pll_10_1.html
+/plots/pll_11_0.html
+/plots/pll_11_1.html
+/plots/pll_12_0.html
+/plots/pll_12_1.html
+/plots/pll_13_0.html
+/plots/pll_13_1.html
+/plots/pll_14_0.html
+/plots/pll_14_1.html
+/plots/pll_15_0.html
+/plots/pll_15_1.html
+/plots/pll_16_0.html
+/plots/pll_16_1.html
+/plots/pll_17_0.html
+/plots/pll_17_1.html
+/plots/pll_18_0.html
+/plots/pll_18_1.html
+/plots/pll_19_0.html
+/plots/pll_19_1.html
+/plots/pll_20_0.html
+/plots/pll_20_1.html
+/plots/pll_21_0.html
+/plots/pll_21_1.html
+/plots/pll_22_0.html
+/plots/pll_22_1.html
+/plots/pll_23_0.html
+/plots/pll_23_1.html
+/plots/pll_24_0.html
+/plots/pll_24_1.html
+/plots/pll_25_0.html
+/plots/pll_25_1.html
+/plots/pll_26_0.html
+/plots/pll_26_1.html
+/plots/pll_27_0.html
+/plots/pll_27_1.html
+/plots/pll_28_0.html
+/plots/pll_28_1.html
+/plots/pll_29_0.html
+/plots/pll_29_1.html
+/plots/pll_30_0.html
+/plots/pll_30_1.html
+/plots/pll_31_0.html
+/plots/pll_31_1.html
+/plots/pll_32_0.html
+/plots/pll_32_1.html
+/plots/pll_33_0.html
+/plots/pll_33_1.html
+/plots/pll_34_0.html
+/plots/pll_34_1.html
+/plots/pll_35_0.html
+/plots/pll_35_1.html
+/plots/pll_36_0.html
+/plots/pll_36_1.html
+/plots/pll_37_0.html
+/plots/pll_37_1.html
+/plots/pll_38_0.html
+/plots/pll_38_1.html
+/plots/pll_39_0.html
+/plots/pll_39_1.html
+/plots/pll_40_0.html
+/plots/pll_40_1.html
+/plots/pll_41_0.html
+/plots/pll_41_1.html
+/plots/pll_42_0.html
+/plots/pll_42_1.html
+/plots/pll_43_0.html
+/plots/pll_43_1.html
+/plots/pll_44_0.html
+/plots/pll_44_1.html
+/plots/pll_45_0.html
+/plots/pll_45_1.html
+/plots/pll_46_0.html
+/plots/pll_46_1.html
+/plots/pll_47_0.html
+/plots/pll_47_1.html
+/plots/pll_48_0.html
+/plots/pll_48_1.html
+/plots/pll_49_0.html
+/plots/pll_49_1.html
+/plots/pll_50_0.html
+/plots/pll_50_1.html
+/plots/pll_51_0.html
+/plots/pll_51_1.html
+/plots/pll_52_0.html
+/plots/pll_52_1.html
+/plots/pll_53_0.html
+/plots/pll_53_1.html
+/plots/pll_54_0.html
+/plots/pll_54_1.html
+/plots/pll_55_0.html
+/plots/pll_55_1.html
+/plots/pll_56_0.html
+/plots/pll_56_1.html
+/plots/pll_57_0.html
+/plots/pll_57_1.html
+/plots/pll_58_0.html
+/plots/pll_58_1.html
+/plots/pll_59_0.html
+/plots/pll_59_1.html
+/plots/pll_60_0.html
+/plots/pll_60_1.html
+/plots/pll_61_0.html
+/plots/pll_61_1.html
+/plots/pll_62_0.html
+/plots/pll_62_1.html
+/plots/pll_63_0.html
+/plots/pll_63_1.html
+/plots/pll_64_0.html
+/plots/pll_64_1.html
+/plots/pll_65_0.html
+/plots/pll_65_1.html
+/plots/pll_66_0.html
+/plots/pll_66_1.html
+/plots/pll_67_0.html
+/plots/pll_67_1.html
+/plots/pll_68_0.html
+/plots/pll_68_1.html
+/plots/pll_69_0.html
+/plots/pll_69_1.html
+/plots/pll_70_0.html
+/plots/pll_70_1.html
+/plots/pll_71_0.html
+/plots/pll_71_1.html
+/plots/pll_72_0.html
+/plots/pll_72_1.html
+/plots/pll_73_0.html
+/plots/pll_73_1.html
+/plots/pll_74_0.html
+/plots/pll_74_1.html
+/plots/pll_75_0.html
+/plots/pll_75_1.html
+/plots/pll_76_0.html
+/plots/pll_76_1.html
+/plots/pll_77_0.html
+/plots/pll_77_1.html
+/plots/pll_78_0.html
+/plots/pll_78_1.html
+/plots/pll_79_0.html
+/plots/pll_79_1.html
+/plots/pll_80_0.html
+/plots/pll_80_1.html
+/plots/pll_81_0.html
+/plots/pll_81_1.html
+/plots/pll_82_0.html
+/plots/pll_82_1.html
+/plots/pll_83_0.html
+/plots/pll_83_1.html
