--- a/examples/imgviz/Cargo.toml
+++ b/examples/imgviz/Cargo.toml
@@ -18,6 +18,7 @@ fast_image_resize = "4.2.1"
 tiny-skia = "0.11"
 crossbeam = "0.8.4"
 anyhow = "1.0"
+rusttype = "0.9"
 
 [features]
 default = ["viz"]
