--- a/crates/fftool/Cargo.toml
+++ b/crates/fftool/Cargo.toml
@@ -15,3 +15,4 @@ anyhow = "1.0"
 crossbeam-channel = "0.5.13"
 bpaf = { version = "0.9", features = ["autocomplete"] }
 indexmap = "2.6.0"
+env_logger = "0.11.5"
