--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,2 +1,11 @@
 max_width = 120
 control_brace_style = "ClosingNextLine"
+
+struct_variant_width = 65
+
+# Preferred input formats.
+imports_granularity = "Crate"
+imports_layout = "HorizontalVertical"
+
+enum_discrim_align_threshold = 3
+struct_field_align_threshold = 3
