--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["Daniel Balsom"]
 keywords = ["emulation", "ibm", "floppy", "disk"]
 repository = "https://github.com/dbalsom/fluxfox"
 license = "MIT"
-license-file = "LICENSE"
 
 [package]
 name = "fluxfox"
@@ -15,6 +14,8 @@ authors.workspace = true
 readme = "README.md"
 keywords.workspace = true
 repository.workspace = true
+license.workspace = true
+license-file = "LICENSE"
 
 [dependencies]
 bit-vec = "0.8"
