--- a/crates/fftool/Cargo.toml
+++ b/crates/fftool/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "fftool"
+description = "An IBM PC floppy disk command line tool powered by fluxfox."
 version = "0.1.0"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
 keywords.workspace = true
 repository.workspace = true
+license = "MIT"
+license-file = "LICENSE"
 
 [dependencies]
 fluxfox = { path = "../.." }
