--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,26 @@ target/
 
 # Test images
 examples/imginfo/test_images/*
+
 tests/images/*
-!tests/images/LICENSE.txt
+!tests/images/temp
+!tests/images/sector_test
+!tests/images/transylvania
+
+# Prevent test images from being added to the repo
+tests/images/temp/*
+# Allow .gitignore in temp to ensure directory exists
+!tests/images/temp/.gitignore
+
+# Allow Transylvania license
+!tests/images/transylvania/LICENSE.txt
+# Allow Transylvania test images
+!tests/images/transylvania/Transylvania*
+# Allow sector tests
+!tests/images/sector_test/sector_test*
+# hide formats not supported yet
+tests/images/sector_test/sector_test_360k.d88
+tests/images/sector_test/sector_test_360k.dmk
 
 # Output images
 *.png
