--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ zip = { version = "2.1.3", default-features = false, features = ["bzip2", "defla
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.2", features = ["js"] }
-zip = { version = "2.1.3", default-features = false, features = ["bzip2", "deflate", "deflate64", "lzma", "time"], optional = true }
+zip = { version = "2.1.3", default-features = false, features = ["deflate", "deflate64", "lzma", "time"], optional = true }
 
 [dev-dependencies]
 sha1 = "0.10.6"
