--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,13 +39,17 @@ tiny-skia = { version = "0.11", optional = true }
 flate2 = { version = "^1.0.30", optional = true }
 histogram = "0.11"
 plotly = { version = "0.10", optional = true }
+wasm-bindgen-futures = "0.4.45"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 zip = { version = "2.1.3", default-features = false, features = ["bzip2", "deflate", "deflate64", "lzma", "time", "zstd"], optional = true }
+tokio = { version = "1", optional = true, features = ["full"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.2", features = ["js"] }
 zip = { version = "2.1.3", default-features = false, features = ["deflate", "deflate64", "lzma", "time"], optional = true }
+wasm-bindgen = { version = "0.2", optional = true }
+wasm-bindgen-futures = { version = "0.4", optional = true }
 
 [dev-dependencies]
 sha1 = "0.10.6"
@@ -53,6 +57,7 @@ hex = "0.4"    # or the latest version
 
 [workspace]
 members = [
+    "examples/async",
     "examples/imginfo",
     "examples/imgdump",
     "examples/imgviz",
@@ -62,6 +67,9 @@ members = [
 
 [features]
 default = ["viz", "zip", "mfi"]
+wasm = ["async", "wasm-bindgen", "wasm-bindgen-futures"]
+tokio-async = ["async", "tokio"]
+async = []
 viz = ["dep:tiny-skia", "dep:image"]
 zip = ["dep:zip"]
 mfi = ["dep:flate2"]
