--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,14 +32,13 @@ rand = "0.8.5"
 sha1_smol = "1.0.1"
 
 # Dependencies for optional features
-image = { version = "0.25", features = ["png"], optional = true }
+
 tiny-skia = { version = "0.11", optional = true }
 
-# Match version of flate2 used by zip
-flate2 = { version = "^1.0.30", optional = true }
+flate2 = { version = "1.0", optional = true }
 histogram = "0.11"
 plotly = { version = "0.10", optional = true }
-wasm-bindgen-futures = "0.4.45"
+wasm-bindgen-futures = "0.4"
 serde = { version = "1.0", optional = true }
 typetag = { version = "0.2", optional = true }
 
@@ -74,7 +73,7 @@ wasm = ["async", "wasm-bindgen", "wasm-bindgen-futures"]
 serde = ["dep:serde", "dep:typetag", "bit-vec/serde_std", "bitflags/serde"]
 tokio-async = ["async", "tokio"]
 async = []
-viz = ["dep:tiny-skia", "dep:image"]
+viz = ["dep:tiny-skia"]
 zip = ["dep:zip"]
 mfi = ["dep:flate2"]
 plot = ["dep:plotly"]
