--- a/.github/workflows/deploy_ff_egui_app.yml
+++ b/.github/workflows/deploy_ff_egui_app.yml
@@ -58,7 +58,9 @@ jobs:
 
       - name: Build ff_egui_app with Trunk
         working-directory: crates/ff_egui_app
-        # Note: --public-url is set to /fluxfox/ as a personal github pages site is hosted at /repo-name/
+        # Note: --public-url is set to /fluxfox/ as a personal GitHub pages site is hosted at /repo-name/
+        env:
+          URL_PATH: "/fluxfox/" # URL_PATH should match public-url
         run: trunk build --release --public-url /fluxfox/
 
       - name: Optimize WASM with wasm-opt
