--- a/crates/ff_egui_app/Trunk.toml
+++ b/crates/ff_egui_app/Trunk.toml
@@ -4,6 +4,7 @@ filehash = false
 no_sri = true
 
 [serve]
+addresses = ["127.0.0.1"]
 open = true
 no_autoreload = false
 headers = { "Cross-Origin-Embedder-Policy" = "require-corp", "Cross-Origin-Opener-Policy" = "same-origin", "Cross-Origin-Resource-Policy" = "same-origin" }
