--- a/crates/ff_egui_app/Cargo.toml
+++ b/crates/ff_egui_app/Cargo.toml
@@ -22,7 +22,7 @@ egui_extras = { version = "0.29", default-features = false, features = ["http", 
 image = { version = "0.25", default-features = false, features = ["png"] }
 log = "0.4"
 fluxfox = { git = "https://github.com/dbalsom/fluxfox.git", branch = "main", default-features = false, features = ["zip", "mfi", "wasm", "viz"] }
-fluxfox_egui = { path = "../ff_egui_lib" }
+fluxfox_egui = { git = "https://github.com/dbalsom/fluxfox.git", branch = "main" }
 # We don't need tiny_skia's png support since egui is pulling in image anyway.
 tiny-skia = { version = "0.11", default-features = false, features = ["std", "simd"] }
 # You only need serde if you want app persistence:
