Update sector viewer when sector status widget is clicked in track list

--- a/crates/ff_egui_app/Cargo.toml
+++ b/crates/ff_egui_app/Cargo.toml
@@ -21,9 +21,8 @@ eframe = { version = "0.29", default-features = false, features = [
 egui_extras = { version = "0.29", default-features = false, features = ["http", "image"] }
 image = { version = "0.25", default-features = false, features = ["png"] }
 log = "0.4"
-fluxfox = { git = "https://github.com/dbalsom/fluxfox.git", branch = "main", default-features = false, features = ["zip", "mfi", "wasm", "viz"] }
-fluxfox_egui = { git = "https://github.com/dbalsom/fluxfox.git", branch = "main" }
-fluxfox_eugui_local = { path = "../ff_egui_lib", package = "fluxfox_egui", optional = true }
+fluxfox = { path = "../..", default-features = false, features = ["zip", "mfi", "wasm", "viz"] }
+fluxfox_egui = { path = "../ff_egui_lib" }
 
 # We don't need tiny_skia's png support since egui is pulling in image anyway.
 tiny-skia = { version = "0.11", default-features = false, features = ["std", "simd"] }
@@ -52,5 +51,3 @@ wasm-bindgen-futures = "0.4"
 wasm-bindgen-rayon = "1.2"
 web-sys = { version = "0.3.70", features = ["DedicatedWorkerGlobalScope", "WorkerOptions", "WorkerType"] }
 
-[features]
-local-dev = ["dep:fluxfox_eugui_local"]
