--- a/crates/ff_egui_lib/Cargo.toml
+++ b/crates/ff_egui_lib/Cargo.toml
@@ -10,11 +10,16 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
-fluxfox = { git = "https://github.com/dbalsom/fluxfox.git", branch = "main", default-features = false }
+log = "0.4"
+fluxfox = { path = "../..", default-features = false }
 egui = {  version = "0.29", optional = true }
 egui_v28 = { package = "egui", version = "0.28", optional = true } # Lower version for MartyPC support
+egui_extras = { version = "0.29", optional = true }
+egui_extras_v28 = { package = "egui_extras", version = "0.28", optional = true } # Lower version for MartyPC support
+serde = { version = "1.0", optional = true }
 
 [features]
-default = ["egui"]
+default = ["egui", "egui_extras", "serde"]
 egui = ["dep:egui"]
-egui28 = ["dep:egui_v28"]
+egui_extras = ["dep:egui_extras"]
+egui28 = ["dep:egui_v28", "dep:egui_extras_v28", "serde"]
