--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,9 +38,9 @@ tiny-skia = { version = "0.11", optional = true }
 flate2 = { version = "1.0", optional = true }
 histogram = "0.11"
 plotly = { version = "0.10", optional = true }
-wasm-bindgen-futures = "0.4"
 serde = { version = "1.0", optional = true }
 typetag = { version = "0.2", optional = true }
+wasm-bindgen-futures = { version = "0.4", optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 zip = { version = "2.1", default-features = false, features = ["bzip2", "deflate", "deflate64", "lzma", "time", "zstd"], optional = true }
