--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,8 @@ serde = { version = "1.0", optional = true }
 typetag = { version = "0.2", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
 
+fluxfox_fat = { git = "https://github.com/dbalsom/fluxfox_fat.git", package = "fatfs", branch = "bpb_fix", default-features = false, features = ["std", "alloc", "log_level_debug"], optional = true }
+
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 zip = { version = "2.1", default-features = false, features = ["bzip2", "deflate", "deflate64", "lzma", "time", "zstd"], optional = true }
 tokio = { version = "1", optional = true, features = ["full"] }
@@ -70,7 +72,7 @@ members = [
 ]
 
 [features]
-default = ["viz", "zip", "mfi"]
+default = ["viz", "zip", "mfi", "fat"]
 wasm = ["async", "wasm-bindgen", "wasm-bindgen-futures"]
 serde = ["dep:serde", "dep:typetag", "bit-vec/serde_std", "bitflags/serde"]
 tokio-async = ["async", "tokio"]
@@ -78,6 +80,7 @@ async = []
 viz = ["dep:tiny-skia"]
 zip = ["dep:zip"]
 mfi = ["dep:flate2"]
+fat = ["dep:fluxfox_fat"]
 plot = ["dep:plotly"]
 
 [lints.clippy]
