--- a/crates/ff_egui_lib/Cargo.toml
+++ b/crates/ff_egui_lib/Cargo.toml
@@ -17,6 +17,8 @@ egui_v28 = { package = "egui", version = "0.28", optional = true } # Lower versi
 egui_extras = { version = "0.29", optional = true }
 egui_extras_v28 = { package = "egui_extras", version = "0.28", optional = true } # Lower version for MartyPC support
 serde = { version = "1.0", optional = true }
+strum = { version = "0.26" }
+strum_macros = { version = "0.26" }
 
 [features]
 default = ["egui", "egui_extras", "serde"]
