--- a/crates/ff_egui_app/Trunk.toml
+++ b/crates/ff_egui_app/Trunk.toml
@@ -10,4 +10,4 @@ no_autoreload = false
 headers = { "Cross-Origin-Embedder-Policy" = "require-corp", "Cross-Origin-Opener-Policy" = "same-origin", "Cross-Origin-Resource-Policy" = "same-origin" }
 
 [watch]
-include = ["../ff_egui_lib/src/**/*.rs"]
+include = ["../../ff_egui_lib/src/**/*.rs"]
