--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,10 @@ tests/images/sector_test/sector_test_360k.dmk
 !tests/images/monster_disk
 !tests/images/monster_disk/monster_disk*
 
-# Ignore misc output files
+# Ignore misc output and scratch files
 *.png
+*.webp
+*.psd
 *.jpg
 *.csv
 /plots/*
