--- a/crates/ff_egui_app/Cargo.toml
+++ b/crates/ff_egui_app/Cargo.toml
@@ -21,7 +21,7 @@ eframe = { version = "0.29", default-features = false, features = [
 egui_extras = { version = "0.29", default-features = false, features = ["http", "image"] }
 image = { version = "0.25", default-features = false, features = ["png"] }
 log = "0.4"
-fluxfox = { path = "../..", default-features = false, features = ["serde", "zip", "tar", "mfi", "wasm", "viz", "fat"] }
+fluxfox = { path = "../..", default-features = false, features = ["serde", "zip", "tar", "mfi", "wasm", "viz", "fat", "ibmpc", "amiga"] }
 fluxfox_egui = { path = "../ff_egui_lib" }
 
 # We don't need tiny_skia's png support since egui is pulling in image anyway.
